# alfred-coo-svc

./: .dockerignore  .env.example  .gitignore  BUNDLE_README.md  Dockerfile  LICENSE  README.md  alfred-coo.env.example  docker-compose.yml  pyproject.toml  soul-svc.env.example
.github/workflows/: autonomous_build_smoke.yml  deploy-oracle-systemd.yml  deploy-oracle.yml  fleet_e2e.yml  pr-body-apev-lint.yml  publish.yml  tiresias_sovereignty_smoke.yml
aletheia/: APE_V.md  Dockerfile  pyproject.toml
aletheia/app/: main.py  soul_writer.py  verdict.py
aletheia/app/preflight/: server.py
aletheia/app/prompt/: __init__.py  parser.py
aletheia/app/router/: __init__.py  policy.py
aletheia/app/watchers/: __init__.py  github_poller.py  mesh_subscriber.py
aletheia/prompts/: verify_v1.md
aletheia/tests/: test_github_poller.py  test_healthz.py  test_mesh_subscriber.py  test_parser.py  test_preflight.py  test_router.py  test_verdict_writer.py
configs/: model_pricing.yaml
deploy/: .env.template  README.md  alfred-coo.service  deploy.sh
deploy/appliance/: .env.template  Caddyfile  IMAGE_PINS.md  README.md  docker-compose.yml  smoke_test.sh
deploy/appliance/alertmanager/: budget_rules.yml  budget_rules_README.md
deploy/appliance/authelia/: BYO_OIDC.md  README.md  configuration.yml  oauth2_clients.yml  oidc_clients_template.yml  users_database.yml
deploy/appliance/infisical/: MIGRATION.md  README.md  agent_sidecar.yml  init.sql  migrate_state_secrets.sh  rotation_endpoint.md
deploy/appliance/mc-init/: README.md  (+2 more)
deploy/endpoint/: .env.template  README.md  bootstrap.sh  docker-compose.yml
docs/: fleet_mode.md
docs/fleet/: protocol.md  runbook.md  threat_model.md
docs/qa-reviews/: tir-phase-b-review.md
firmware/alfred_voice_puck/: .gitignore  README.md  platformio.ini  secrets.ini.example
migrations/external_agents/: 001_external_agents_table.sql  README.md
ops/grafana/: README.md  doctor_metrics_dashboard.json
plans/v1-ga/: AB-22.md  AB-25.md  AD-a.md  AD-b.md  AD-c.md  AD-d.md  AD-e.md  AD-f.md  AD-g.md  AD-h.md  AD.md  AI-W1-A.md  ALT-02.md  ALT-03.md  ALT-04.md  ALT-06.md  ALT-07.md  ALT-08.md  A_tiresias_in_appliance.md  B_aletheia_daemon.md  C-29B.md  C-29a.md  C-29b.md  C_fleet_mode_endpoint.md  D_ops_layer.md  E_soul_svc_gaps.md  F14.md  F16.md  F17.md  F19A-a.md  F19A-b.md  F19A-c.md  F19A-d.md  F19a.md  F19b.md  F21.md  F22.md  F25.md  F_autonomous_build_persona.md  G_autonomous_build_gap_closers.md  (+64 more)
plugins/saluca-plugin-echo-inbound/: README.md  manifest.yaml  pyproject.toml
plugins/saluca-plugin-echo-outbound/: README.md  manifest.yaml  pyproject.toml
plugins/saluca-plugin-echo-outbound/saluca_plugin_echo_outbound/: __init__.py  plugin.py
plugins/saluca-plugin-echo-outbound/tests/: test_echo_outbound.py
plugins/saluca-plugin-langchain/: README.md  manifest.yaml  pyproject.toml
plugins/saluca-plugin-sdk/: LICENSE  README.md  pyproject.toml
plugins/saluca-plugin-sdk/saluca_plugin_sdk/: __init__.py  agent_plugin.py  audit_hook.py  conftest.py  dataclasses.py  manifest_validator.py
plugins/saluca-plugin-sdk/saluca_plugin_sdk/contract/: inbound.py  outbound.py
plugins/saluca-plugin-sdk/tests/: test_abc_conformance.py  test_manifest_validator.py
plugins/saluca-plugin-sdk/tests/contract/: test_inbound_contract.py  test_outbound_contract.py
plugins/saluca-plugin-sdk/tests/contract/fixtures/: broken_inbound_plugin.py  missing_actions_plugin.py
plugins/saluca-plugin-sdk/tests/fixtures/: external_agent_manifest.yaml  external_surface_manifest.yaml
saluca-deploy/docs/: agent-ingest-onboarding.md
scripts/: mc_auth_add_oidc.sh  mc_auth_init_admin.sh  mc_restore.sh  smoke_model_registry.py  soak_harness.py  sync_model_registry_to_oracle.sh
src/: co_w2_a_cockpit_live_activity_panel_all_.py  co_w2_b_extend_v1_cockpit_state_with_act.py  co_w3_a_cockpit_activity_stream_sse_even.py
src/alfred_coo/: __init__.py  __main__.py  artifacts.py  cockpit_router.py  config.py  dispatch.py  health.py  log.py  main.py  mesh.py  orphan_recovery.py  persona.py  persona_github.py  persona_loader.py  pricing.py  slack_log_handler.py  soul.py  structured.py  tools.py  trace.py
src/mcctl/: __init__.py  __main__.py
tests/: test_agent_ingest_direction_routing.py  test_agent_ingest_lifecycle.py  test_agent_ingest_register.py  test_alfred_doctor.py  test_artifacts.py  test_autonomous_build_already_shipped_skip.py  test_autonomous_build_budget.py  test_autonomous_build_cadence.py  test_autonomous_build_dry_run.py  test_autonomous_build_graph.py  test_autonomous_build_orchestrator.py  test_autonomous_build_review_loop.py  test_autonomous_build_ss08_gate.py  test_autonomous_build_state.py  test_autonomous_build_target_repo_drift.py  test_autonomous_build_triage_needed_loop.py  test_benchmark_integration.py  test_benchmark_runner.py  test_benchmark_scorer.py  test_benchmark_selector.py  test_benchmark_storage.py  test_co_w2_a_cockpit_live_activity_panel_all_.py  test_cockpit_router.py  test_cockpit_state.py  test_decomposition_writes_plan_doc.py  test_degraded_mode_matrix.py  test_destructive_guardrail.py  test_dispatch.py  test_doctor_metrics.py  test_external_agents_migration.py  test_external_agents_repository.py  test_file_collision.py  test_fleet_gateway_ws.py  test_fleet_memory_pull.py  test_fleet_memory_push.py  test_fleet_quarantine.py  test_fleet_reconcile.py  test_fleet_voice_stt.py  test_fleet_voice_tts.py  test_fleet_voice_ws.py  (+28 more)
tests/auth/: test_scope_middleware.py  test_ttl_validation.py
tests/autonomous_build/: test_ab22_target_hints.py  test_builder_skip_already_merged.py  test_dynamic_target_hints.py  test_existing_pr_skip_sal4115.py  test_inherited_open_pr_review_dispatch.py  test_orchestrator_orphan_active_mesh.py  test_orchestrator_phantom_child.py  test_pr_exists_ready_counter.py  test_silent_with_tools_recovery.py
tests/fleet/: __init__.py  test_tenant_auth.py  test_tenant_policy.py
tests/scripts/: test_migrate_secrets.sh
tests/smoke/: README.md  test_autonomous_build_smoke.py
tools/: audit_target_repo_project_drift.py
(+127 files in other folders)
