[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred-coo-svc"
version = "0.1.0"
description = "Headless Alfred - persistent COO daemon (Mission Control substrate)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [{name = "Saluca LLC", email = "info@saluca.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "python-json-logger>=2.0.7",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
alfred-coo = "alfred_coo.__main__:main"

[project.urls]
Homepage = "https://github.com/salucallc/alfred-coo-svc"
Issues = "https://github.com/salucallc/alfred-coo-svc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
