[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred-coo-svc"
version = "0.1.0"
description = "Headless Alfred - persistent COO daemon (Mission Control substrate)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [{name = "Saluca LLC", email = "info@saluca.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "python-json-logger>=2.0.7",
    "tenacity>=8.2.0",
    # Sub #62 (2026-04-27): model registry hot-swap reads YAML at dispatch
    # time. Schema validation falls back to last-known-good cache, so a
    # missing PyYAML at runtime would silently disable hot-swap; pin as a
    # real dep instead.
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
# fleet_voice (SAL-4003 onwards): voice puck STT/TTS adapters. Optional so
# the core COO daemon container doesn't have to ship libopus + webrtcvad
# native deps unless the operator opts into the voice gateway sidecar.
#   * openai: Whisper-1 transcription + tts-1 (SAL-4005) HTTP client.
#   * webrtcvad-wheels: pure-wheel build of WebRTC VAD (no compile step on
#     Windows dev boxes; Linux runtime is identical).
#   * opuslib: ctypes binding to libopus. Requires libopus0 in the runtime
#     image (`apt-get install libopus0` on the Pi / Cloud Run image, or
#     `libopus.dll` on PATH on Windows). The fleet_voice.stt module
#     lazy-imports it so the package still imports on bare boxes.
voice = [
    "openai>=1.0.0",
    "webrtcvad-wheels>=2.0.10",
    "opuslib>=3.0.1",
]

[project.scripts]
alfred-coo = "alfred_coo.__main__:main"

[project.urls]
Homepage = "https://github.com/salucallc/alfred-coo-svc"
Issues = "https://github.com/salucallc/alfred-coo-svc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: end-to-end dry-run smoke tests (opt-in; run via `pytest -m smoke`)",
]
# Regular `pytest` runs skip the smoke tests; opt in with `-m smoke`.
addopts = "-m 'not smoke'"
