[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "0.1.0"
description = "Aletheia verification daemon"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn"]

[tool.setuptools.packages.find]
where = ["."]
