[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "0.1.0"
description = "Standalone Aletheia verifier service"
authors = [{name = "Saluca", email = "dev@saluca.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.dependencies]
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}

[tool.setuptools.packages.find]
where = ["."]
